--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -6,7 +6,7 @@
             <button routerLink="/login">Sing in/SingUp</button></div> 
         </div>
         <div class="imgdiv">
-            <img class="img" src="/assets/images/shop.png" alt="" >
+            <img class="img" src="assets/images/shop.png" alt="" >
         </div>
     </div>
     <div class="productsdiv">
